Fix navbar problem with z-index

--- a/app/js/components/navbar/navbar.css
+++ b/app/js/components/navbar/navbar.css
@@ -7,7 +7,7 @@
 
 .main-menu{
   position: relative;
-  z-index: var(--layer-front);
+  z-index: var(--layer-over);
   background: transparent;
   padding: var(--small-padding) 0;
 
